src/objects/Forecast__c/Forecast__c.object-meta.xml
<CustomObject>
    <label>Forecast</label>
    <nameField>
        <displayFormat>F-{0000}</displayFormat>
        <label>Forecast Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Forecasts</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>