src/objects/Forecast__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Forecasts</relationshipLabel>
    <relationshipName>Forecasts</relationshipName>
    <type>Lookup</type>
</CustomField>