src/objects/Forecast__c/fields/Backlog_Revenue_Requested__c.field-meta.xml
<CustomField>
    <fullName>Backlog_Revenue_Requested__c</fullName>
    <label>Backlog Revenue Requested</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>