src/objects/Forecast__c/fields/Backlog_Revenue_Scheduled__c.field-meta.xml
<CustomField>
    <fullName>Backlog_Revenue_Scheduled__c</fullName>
    <label>Backlog Revenue Scheduled</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>