src/objects/Forecast__c/fields/Backlog_Units_Requested__c.field-meta.xml
<CustomField>
    <fullName>Backlog_Units_Requested__c</fullName>
    <label>Backlog Units Requested</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>