src/objects/Forecast__c/fields/Backlog_Units_Scheduled__c.field-meta.xml
<CustomField>
    <fullName>Backlog_Units_Scheduled__c</fullName>
    <label>Backlog Units Scheduled</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>