src/objects/Forecast__c/fields/BusinessUnit__c.field-meta.xml
<CustomField>
    <fullName>BusinessUnit__c</fullName>
    <description>Business Unit text field  for Sharing rule</description>
    <label>Business Unit</label>
    <length>20</length>
    <type>Text</type>
</CustomField>