src/objects/Forecast__c/fields/Constrained_Forecast_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Constrained_Forecast_Revenue__c</fullName>
    <label>Constrained Forecast Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>