src/objects/Forecast__c/fields/Constrained_Forecast_Units__c.field-meta.xml
<CustomField>
    <fullName>Constrained_Forecast_Units__c</fullName>
    <label>Constrained Forecast Units</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>