src/objects/Forecast__c/fields/Current_User_Is_PLM__c.field-meta.xml
<CustomField>
    <fullName>Current_User_Is_PLM__c</fullName>
    <formula>if($User.Id =  PLM__c  , TRUE, FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Current User Is PLM</label>
    <type>Checkbox</type>
</CustomField>