src/objects/Forecast__c/fields/Current_User_is_VP__c.field-meta.xml
<CustomField>
    <fullName>Current_User_is_VP__c</fullName>
    <description>This field identifies whether the currently logged in user is the VP of the RSM on this record.</description>
    <formula>if($User.Id = RSM__r.VP__c  , TRUE, FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Current User is VP</label>
    <type>Checkbox</type>
</CustomField>