src/objects/Forecast__c/fields/Customer__c.field-meta.xml
<CustomField>
    <fullName>Customer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Customer</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Forecasts (Customer)</relationshipLabel>
    <relationshipName>Forecasts2</relationshipName>
    <type>Lookup</type>
</CustomField>