src/objects/Forecast__c/fields/Data_Rate__c.field-meta.xml
<CustomField>
    <fullName>Data_Rate__c</fullName>
    <formula>TEXT( Item__r.Data_Rate__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Data Rate</label>
    <type>Text</type>
</CustomField>