src/objects/Forecast__c/fields/Description_Marketing_P_N__c.field-meta.xml
<CustomField>
    <fullName>Description_Marketing_P_N__c</fullName>
    <formula>Item__r.Marketing_P_N__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Description- Marketing P/N</label>
    <type>Text</type>
</CustomField>