src/objects/Forecast__c/fields/Detector__c.field-meta.xml
<CustomField>
    <fullName>Detector__c</fullName>
    <formula>TEXT( Item__r.Detector__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Detector</label>
    <type>Text</type>
</CustomField>