src/objects/Forecast__c/fields/FCST_Customer__c.field-meta.xml
<CustomField>
    <fullName>FCST_Customer__c</fullName>
    <label>FCST Customer</label>
    <length>240</length>
    <type>Text</type>
</CustomField>