src/objects/Forecast__c/fields/Form_Factor__c.field-meta.xml
<CustomField>
    <fullName>Form_Factor__c</fullName>
    <formula>TEXT( Item__r.Form_Factor__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Form Factor</label>
    <type>Text</type>
</CustomField>