src/objects/Forecast__c/fields/Item__c.field-meta.xml
<CustomField>
    <fullName>Item__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Item</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Forecasts</relationshipLabel>
    <relationshipName>Forecasts</relationshipName>
    <type>Lookup</type>
</CustomField>