src/objects/Forecast__c/fields/Laser__c.field-meta.xml
<CustomField>
    <fullName>Laser__c</fullName>
    <formula>TEXT( Item__r.Laser__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Laser</label>
    <type>Text</type>
</CustomField>