src/objects/Forecast__c/fields/Mkt_Application__c.field-meta.xml
<CustomField>
    <fullName>Mkt_Application__c</fullName>
    <formula>TEXT( Item__r.Mkt_Application__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Mkt Application</label>
    <type>Text</type>
</CustomField>