src/objects/Forecast__c/fields/Period__c.field-meta.xml
<CustomField>
    <fullName>Period__c</fullName>
    <label>Period</label>
    <length>120</length>
    <type>Text</type>
</CustomField>