src/objects/Forecast__c/fields/PLM_Approved_Revenue__c.field-meta.xml
<CustomField>
    <fullName>PLM_Approved_Revenue__c</fullName>
    <label>PLM Approved Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>