src/objects/Forecast__c/fields/PLM_Approved_Units__c.field-meta.xml
<CustomField>
    <fullName>PLM_Approved_Units__c</fullName>
    <label>PLM Approved Units</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>