src/objects/Forecast__c/fields/PLM_Forecast_Units__c.field-meta.xml
<CustomField>
    <fullName>PLM_Forecast_Units__c</fullName>
    <label>PLM Forecast Units</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>