src/objects/Forecast__c/fields/PLM_User_Active__c.field-meta.xml
<CustomField>
    <fullName>PLM_User_Active__c</fullName>
    <formula>PLM__r.IsActive</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PLM User Active</label>
    <type>Checkbox</type>
</CustomField>