src/objects/Forecast__c/fields/Product_Config__c.field-meta.xml
<CustomField>
    <fullName>Product_Config__c</fullName>
    <formula>TEXT( Item__r.Product_Config__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product Config</label>
    <type>Text</type>
</CustomField>