src/objects/Forecast__c/fields/Quarter__c.field-meta.xml
<CustomField>
    <fullName>Quarter__c</fullName>
    <label>Quarter</label>
    <length>120</length>
    <type>Text</type>
</CustomField>