src/objects/Forecast__c/fields/RSM_Approved_Revenue__c.field-meta.xml
<CustomField>
    <fullName>RSM_Approved_Revenue__c</fullName>
    <label>RSM Approved Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>