src/objects/Forecast__c/fields/RSM_Approved_Units__c.field-meta.xml
<CustomField>
    <fullName>RSM_Approved_Units__c</fullName>
    <label>RSM Approved Units</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>