src/objects/Forecast__c/fields/RSM_Forecast_Unit__c.field-meta.xml
<CustomField>
    <fullName>RSM_Forecast_Unit__c</fullName>
    <label>RSM Forecast Unit</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>