src/objects/Forecast__c/fields/RSM_User_Active__c.field-meta.xml
<CustomField>
    <fullName>RSM_User_Active__c</fullName>
    <formula>RSM__r.IsActive</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>RSM User Active</label>
    <type>Checkbox</type>
</CustomField>