src/objects/Forecast__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>RSM_Approved_Units__c</columns>
    <columns>Actual_Revenue__c</columns>
    <columns>Actual_Units__c</columns>
    <columns>Account__c</columns>
    <columns>Business_Unit__c</columns>
    <columns>BusinessUnit__c</columns>
    <columns>Customer__c</columns>
    <columns>PLM__c</columns>
    <columns>RSM__c</columns>
    <columns>Product_Group__c</columns>
    <columns>Item__c</columns>
    <columns>Period__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Business_Unit__c</field>
        <operation>equals</operation>
        <value>WSS</value>
    </filters>
    <label>All</label>
</ListView>